# isolate-checker

./: Cargo.toml  README.md
examples/: basic.rs
src/: analyzer.rs  ast.rs  checker.rs  error.rs  hir_ctx.rs  infer.rs  ir.rs  lib.rs  util.rs
src/ast/: swc.rs
src/hir/: README.md  decl.rs  lower.rs  mod.rs
src/hir_def/: README.md  def.rs  hir.rs  lower.rs  mod.rs
src/hir_ty/: mod.rs  ty.rs  tykind.rs
src/infer/: api.rs  check.rs  infer_type_node.rs  infer_value_node.rs  unify.rs
src/ir/: decl.rs  ty.rs
src/ir/ty/: tykind.rs
src/scope/: mod.rs  scope.rs
tests/: infer.rs
tests/fixtures/: literal.ts
tests/snapshots/: infer__basic.err.snap  infer__basic.err.snap.new
