[package]
name = "isolate-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
ra_ap_intern = { version = "0.0.244"}
swc_core = { version = "5.0.4", features = [ 
  "ecma_ast",
  "ecma_codegen",
  "ecma_parser",
  "ecma_quote",
  "common"
]}
miette = { version = "7.2.0", features = ["fancy"]}

im = { package = "im-rc", version = "15.1"}