[package]
name = "isolate-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
compiletest_rs = { version = "0.11.1"}
ra_ap_intern = { version = "0.0.244"}
rangemap = { version = "1.5"}
swc_core = { version = "5.0.4", features = [ 
  "ecma_ast",
  "ecma_codegen",
  "ecma_transforms",
  "ecma_parser",
  "ecma_quote",
  "ecma_visit",
  "common",
  "common_tty"
]}
ena = { version = "0.14.3"}
miette = { version = "7.2.0", features = ["fancy"]}

im = { package = "im-rc", version = "15.1"}

la-arena = { version = "0.3"}

thiserror = { version = "2.0.3"}

petgraph = { version = "0.6.5"}
insta = { version = "1.41.1"}

indexmap = { version = "2.5.0"}
rustc-hash = { version = "1.1.0"}